--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,19 @@
 version: "3.9"
 services:
   backend:
-    build:
-      context: ./backend
+    build: ./backend
     ports:
       - "8000:8000"
     networks:
       - dmxnet
-
   frontend:
-    build:
-      context: ./frontend
+    build: ./frontend
     ports:
       - "3000:80"
     depends_on:
       - backend
     networks:
       - dmxnet
-
 networks:
   dmxnet:
     driver: bridge
